--- a/scripts/vw_datatool/example_usage.ipynb
+++ b/scripts/vw_datatool/example_usage.ipynb
@@ -2,14 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T21:45:27.971381Z",
-     "start_time": "2020-01-28T21:45:27.969019Z"
-    },
-    "hide_input": false,
-    "init_cell": true
+    "hide_input": false
    },
    "outputs": [],
    "source": [
@@ -18,13 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:44:37.020128Z",
-     "start_time": "2020-01-28T23:44:37.017762Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create an array to store CB impressions\n",
@@ -33,13 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:46:17.626436Z",
-     "start_time": "2020-01-28T23:46:17.618106Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# add a sample\n",
@@ -61,13 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:46:39.826656Z",
-     "start_time": "2020-01-28T23:46:39.823682Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# add another sample\n",
@@ -80,13 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:46:53.779185Z",
-     "start_time": "2020-01-28T23:46:53.763138Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# save to json and vw files\n",
@@ -96,113 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:47:13.888754Z",
-     "start_time": "2020-01-28T23:47:13.885608Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"_multi\": [\n",
-      "    {\n",
-      "      \"_tag\": \"Cappucino\",\n",
-      "      \"i\": {\n",
-      "        \"id\": \"Cappucino\"\n",
-      "      },\n",
-      "      \"j\": [\n",
-      "        {\n",
-      "          \"type\": \"hot\",\n",
-      "          \"origin\": \"kenya\",\n",
-      "          \"organic\": \"yes\",\n",
-      "          \"roast\": \"dark\"\n",
-      "        }\n",
-      "      ]\n",
-      "    },\n",
-      "    {\n",
-      "      \"_tag\": \"Coldbrew\",\n",
-      "      \"i\": {\n",
-      "        \"id\": \"Coldbrew\"\n",
-      "      },\n",
-      "      \"j\": [\n",
-      "        {\n",
-      "          \"type\": \"cold\",\n",
-      "          \"origin\": \"brazil\",\n",
-      "          \"organic\": \"yes\",\n",
-      "          \"roast\": \"light\"\n",
-      "        }\n",
-      "      ]\n",
-      "    },\n",
-      "    {\n",
-      "      \"_tag\": \"Icedmocha\",\n",
-      "      \"i\": {\n",
-      "        \"id\": \"Icedmocha\"\n",
-      "      },\n",
-      "      \"j\": [\n",
-      "        {\n",
-      "          \"type\": \"cold\",\n",
-      "          \"origin\": \"ethiopia\",\n",
-      "          \"organic\": \"no\",\n",
-      "          \"roast\": \"light\"\n",
-      "        }\n",
-      "      ]\n",
-      "    },\n",
-      "    {\n",
-      "      \"_tag\": \"Latte\",\n",
-      "      \"i\": {\n",
-      "        \"id\": \"Latte\"\n",
-      "      },\n",
-      "      \"j\": [\n",
-      "        {\n",
-      "          \"type\": \"hot\",\n",
-      "          \"origin\": \"brazil\",\n",
-      "          \"organic\": \"no\",\n",
-      "          \"roast\": \"dark\"\n",
-      "        }\n",
-      "      ]\n",
-      "    }\n",
-      "  ],\n",
-      "  \"f\": {\n",
-      "    \"username\": \"joe\",\n",
-      "    \"time_of_day\": \"evening\",\n",
-      "    \"a\": 3.4\n",
-      "  },\n",
-      "  \"_label_cost\": 1,\n",
-      "  \"_label_probability\": 0.5,\n",
-      "  \"_label_Action\": 2,\n",
-      "  \"_labelIndex\": 1\n",
-      "}\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:47:56.298027Z",
-     "start_time": "2020-01-28T23:47:56.294718Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'context_features': [{'username': 'joe', 'time_of_day': 'evening', 'a': 3.4}], 'actions': [{'id': 'Cappucino', '_tag': 'Cappucino', 'features': [{'type': 'hot', 'origin': 'kenya', 'organic': 'yes', 'roast': 'dark'}]}, {'id': 'Coldbrew', '_tag': 'Coldbrew', 'features': [{'type': 'cold', 'origin': 'brazil', 'organic': 'yes', 'roast': 'light'}]}, {'id': 'Icedmocha', '_tag': 'Icedmocha', 'features': [{'type': 'cold', 'origin': 'ethiopia', 'organic': 'no', 'roast': 'light'}]}, {'id': 'Latte', '_tag': 'Latte', 'features': [{'type': 'hot', 'origin': 'brazil', 'organic': 'no', 'roast': 'dark'}]}], 'eventId': 1, 'excludedActions': [], 'deferActivation': False}\n",
-      "{'context_features': [{'username': 'joe', 'time_of_day': 'evening', 'a': 3.4}], 'actions': [{'id': 'Cappucino', '_tag': 'Cappucino', 'features': [{'type': 'hot', 'origin': 'kenya', 'organic': 'yes', 'roast': 'dark'}]}, {'id': 'Coldbrew', '_tag': 'Coldbrew', 'features': [{'type': 'cold', 'origin': 'brazil', 'organic': 'yes', 'roast': 'light'}]}, {'id': 'Icedmocha', '_tag': 'Icedmocha', 'features': [{'type': 'cold', 'origin': 'ethiopia', 'organic': 'no', 'roast': 'light'}]}, {'id': 'Latte', '_tag': 'Latte', 'features': [{'type': 'hot', 'origin': 'brazil', 'organic': 'no', 'roast': 'dark'}]}], 'eventId': 1, 'excludedActions': [], 'deferActivation': False}\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# convert to APS request\n",
     "for sample in samples:\n",
@@ -211,22 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:49:17.540467Z",
-     "start_time": "2020-01-28T23:49:17.534865Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<CBSample.Sample object at 0x7f7516f1a6a0>, <CBSample.Sample object at 0x7f75166c47b8>]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# import export dsjson\n",
     "samples2 = CBIO.samples_from_file('../test.json')\n",
@@ -236,13 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:48:52.139517Z",
-     "start_time": "2020-01-28T23:48:52.127018Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import export vw (assume no nested namespaces)\n",
@@ -252,13 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:48:58.663881Z",
-     "start_time": "2020-01-28T23:48:58.654847Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# convert vw and append to dsjson\n",
@@ -268,129 +125,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:49:39.544502Z",
-     "start_time": "2020-01-28T23:49:39.284786Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num weight bits = 18\r\n",
-      "learning rate = 0.5\r\n",
-      "initial_t = 0\r\n",
-      "power_t = 0.5\r\n",
-      "using no cache\r\n",
-      "Reading datafile = ../test.txt\r\n",
-      "num sources = 1\r\n",
-      "average  since         example        example  current  current  current\r\n",
-      "loss     last          counter         weight    label  predict features\r\n",
-      "0.000000 0.000000            1            1.0    known        0:0...       24\r\n",
-      "0.000000 0.000000            2            2.0    known        0:0.363167...       24\r\n",
-      "\r\n",
-      "finished run\r\n",
-      "number of examples = 2\r\n",
-      "weighted example sum = 2.000000\r\n",
-      "weighted label sum = 0.000000\r\n",
-      "average loss = 0.000000\r\n",
-      "total feature number = 56\r\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!vw --cb_adf -P 1 -d ../test.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-28T23:49:43.967592Z",
-     "start_time": "2020-01-28T23:49:43.807016Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num weight bits = 18\r\n",
-      "learning rate = 0.5\r\n",
-      "initial_t = 0\r\n",
-      "power_t = 0.5\r\n",
-      "using no cache\r\n",
-      "Reading datafile = ../test.json\r\n",
-      "num sources = 1\r\n",
-      "average  since         example        example  current  current  current\r\n",
-      "loss     last          counter         weight    label  predict features\r\n",
-      "0.000000 0.000000            1            1.0    known        0:0...       24\r\n",
-      "0.000000 0.000000            2            2.0    known        0:0.363167...       24\r\n",
-      "\r\n",
-      "finished run\r\n",
-      "number of examples = 2\r\n",
-      "weighted example sum = 2.000000\r\n",
-      "weighted label sum = 0.000000\r\n",
-      "average loss = 0.000000\r\n",
-      "total feature number = 56\r\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!vw --cb_adf -P 1 -d ../test.json --json"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "azureml_py36",
-   "language": "python",
-   "name": "azureml_py36"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
-  },
-  "varInspector": {
-   "cols": {
-    "lenName": 16,
-    "lenType": 16,
-    "lenVar": 40
-   },
-   "kernels_config": {
-    "python": {
-     "delete_cmd_postfix": "",
-     "delete_cmd_prefix": "del ",
-     "library": "var_list.py",
-     "varRefreshCmd": "print(var_dic_list())"
-    },
-    "r": {
-     "delete_cmd_postfix": ") ",
-     "delete_cmd_prefix": "rm(",
-     "library": "var_list.r",
-     "varRefreshCmd": "cat(var_dic_list()) "
-    }
-   },
-   "types_to_exclude": [
-    "module",
-    "function",
-    "builtin_function_or_method",
-    "instance",
-    "_Feature"
-   ],
-   "window_display": true
+   "nbconvert_exporter": "python"
   }
  },
  "nbformat": 4,
