--- a/scripts/vw_datatool/example_usage.ipynb
+++ b/scripts/vw_datatool/example_usage.ipynb
@@ -8,6 +8,8 @@
    },
    "outputs": [],
    "source": [
+    "# TODO convert to python unit tests\n",
+    "\n",
     "import CBSample, CBIO"
    ]
   },
