add link to docs

--- a/scripts/vw_datatool/example_usage.ipynb
+++ b/scripts/vw_datatool/example_usage.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CBDataTool: example usage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
