--- a/from_mwt_ds/DataScience/sweep_local.ipynb
+++ b/from_mwt_ds/DataScience/sweep_local.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from VwPipeline import Logger\n",
+    "from VwPipeline import Loggers, Handlers\n",
     "from VwPipeline.VwCache import VwCache\n",
     "from VwPipeline.Vw import Vw\n",
     "from VwPipeline.VwOpts import dimension, product\n",
@@ -44,10 +44,12 @@
     "#your vw path\n",
     "vw_path = r'C:\\vw\\vw.exe'\n",
     "\n",
-    "logger = Logger.ConsoleLogger('WARNING')\n",
-    "cache = VwCache(r'_cache', logger)\n",
-    "\n",
-    "vw = Vw(vw_path, cache, handler=Logger.WidgetHandler())"
+    "cache = VwCache(r'_cache')\n",
+    "vw = Vw(vw_path,\n",
+    "    cache,\n",
+    "    handlers=[Handlers.WidgetHandler()],\n",
+    "#    loggers=[Loggers.ConsoleLogger('DEBUG')]\n",
+    "    )"
    ]
   },
   {
@@ -63,16 +65,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = [r'C:\\data\\cb_data\\1.json',\n",
-    "    r'C:\\data\\cb_data\\2.json'\n",
-    "    r'C:\\data\\cb_data\\3.json'\n",
+    "inputs = [r'C:\\data\\cb\\1.json',\n",
+    "    r'C:\\data\\cb\\2.json',\n",
+    "#    r'C:\\data\\cb\\3.json',\n",
     "    ]\n",
     "inputs"
    ]
   },
   {
    "source": [
-    "# Define options grid"
+    "# Define options grid and train"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opts = product(\n",
+    "    dimension('#base', ['--ccb_explore_adf -P 10000 --preserve_performance_counters --save_resume --dsjson']),\n",
+    "    dimension('--cb_type', ['ips', 'mtr']),\n",
+    ")\n",
+    "opts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = vw.train(inputs, opts)\n",
+    "result"
+   ]
+  },
+  {
+   "source": [
+    "## Get access to losses and job artifacts"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Loss[0]: {result[0].Loss}')\n",
+    "print(f'Populated options: {result[0].Populated}')"
+   ]
+  },
+  {
+   "source": [
+    "# Pandas wrappers"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -84,16 +133,26 @@
    "outputs": [],
    "source": [
     "opts = pd.DataFrame(product(\n",
-    "    dimension('#base', ['--ccb_explore_adf -P 500 --preserve_performance_counters --save_resume --epsilon 0 --dsjson']),\n",
-    "    dimension('-l', [0.1, 0.2]),\n",
-    "    dimension('--cb_type', ['ips', 'mtr'])\n",
+    "    dimension('#base', ['--ccb_explore_adf -P 10000 --preserve_performance_counters --save_resume']),\n",
+    "    dimension('--cb_type', ['ips', 'mtr']),\n",
+    "    dimension('#format', ['', '--dsjson'])\n",
     "))\n",
     "opts"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Train"
+    "result = vw.train(inputs, opts)\n",
+    "result"
+   ]
+  },
+  {
+   "source": [
+    "## Investigate failure"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -104,16 +163,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = vw.train(inputs, opts, [])\n",
-    "results"
+    "result[~result['!Loss'].notnull()].iloc[0]['!Job'].Tasks[0].stdout()"
    ]
   },
   {
    "source": [
-    "# Explore metrics"
+    "## Explore metrics "
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.iloc[1]['!Metrics'].head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -122,45 +189,9 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "[(-r['!Metrics']['loss_per_example']).plot(label=f\"{i}\", figsize=(10,6)) for i, r in results.iterrows()]\n",
+    "[(-r['!Metrics']['loss_per_example']).plot(label=f\"{r['!Job'].Name}\", figsize=(10,6)) for i, r in result[result['!Loss'].notnull()].iterrows()]\n",
     "plt.legend()"
    ]
-  },
-  {
-   "source": [
-    "# Get the best ones and try more configurations on top"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best = results.sort_values(by='!Loss').head(2)\n",
-    "opts = pd.DataFrame(product(best,\n",
-    "    dimension('#coin', ['', '--coin'])))\n",
-    "opts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = vw.train(inputs, opts, [])\n",
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
