--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -44,9 +44,7 @@
     "#your vw path\n",
     "vw_path = r'C:\\vw\\vw.exe'\n",
     "\n",
-    "#path to local folder to keep intermediate results\n",
     "cache = VwCache(r'_cache')\n",
-    "\n",
     "vw = Vw(vw_path,\n",
     "    cache,\n",
     "    handlers=[Handlers.WidgetHandler()],\n",
@@ -67,9 +65,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = [\n",
-    "    r'C:\\data\\cb\\1.json',\n",
+    "inputs = [r'C:\\data\\cb\\1.json',\n",
     "    r'C:\\data\\cb\\2.json',\n",
+    "#    r'C:\\data\\cb\\3.json',\n",
     "    ]\n",
     "inputs"
    ]
@@ -87,9 +85,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opts = pd.DataFrame(product(\n",
+    "opts = product(\n",
     "    dimension('#base', ['--ccb_explore_adf -P 10000 --preserve_performance_counters --save_resume --dsjson']),\n",
     "    dimension('--cb_type', ['ips', 'mtr']),\n",
+    ")\n",
+    "opts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = vw.train(inputs, opts)\n",
+    "result"
+   ]
+  },
+  {
+   "source": [
+    "## Get access to losses and job artifacts"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Loss[0]: {result[0].Loss}')\n",
+    "print(f'Populated options: {result[0].Populated}')"
+   ]
+  },
+  {
+   "source": [
+    "# Pandas wrappers"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opts = pd.DataFrame(product(\n",
+    "    dimension('#base', ['--ccb_explore_adf -P 10000 --preserve_performance_counters --save_resume']),\n",
+    "    dimension('--cb_type', ['ips', 'mtr']),\n",
+    "    dimension('#format', ['', '--dsjson'])\n",
     "))\n",
     "opts"
    ]
@@ -106,7 +152,7 @@
   },
   {
    "source": [
-    "# Explore metrics\n"
+    "## Investigate failure"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -117,7 +163,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.iloc[0]['!Metrics'].head()"
+    "result[~result['!Loss'].notnull()].iloc[0]['!Job'].Tasks[0].stdout()"
+   ]
+  },
+  {
+   "source": [
+    "## Explore metrics "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.iloc[1]['!Metrics'].head()"
    ]
   },
   {
@@ -129,44 +191,6 @@
     "import matplotlib.pyplot as plt\n",
     "[(-r['!Metrics']['loss_per_example']).plot(label=f\"{r['!Job'].Name}\", figsize=(10,6)) for i, r in result[result['!Loss'].notnull()].iterrows()]\n",
     "plt.legend()"
-   ]
-  },
-  {
-   "source": [
-    "# Choose the best and try other options on top"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best1 = result.sort_values(by='!Loss').head(1)\n",
-    "best1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "opts = pd.DataFrame(product(best1, \n",
-    "    dimension('-l', ['0.1', '0.2'])))\n",
-    "opts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = vw.train(inputs, opts)\n",
-    "result"
    ]
   }
  ]
