--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8-final"
+   "version": "3.8.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python36564bitbasecondad44845cb0df0418986ceeb24f570a602",
-   "display_name": "Python 3.6.5 64-bit ('base': conda)",
+   "name": "python38564bitfd59076926044bd899f4541e1d3f6749",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python"
   }
  },
@@ -42,13 +42,13 @@
     "import pandas as pd\n",
     "\n",
     "#your vw path\n",
-    "vw_path = r'C:\\vw\\vw.exe'\n",
+    "vw_path = r'/bin/vw'\n",
     "\n",
-    "cache = VwCache(r'_cache')\n",
+    "cache = VwCache(r'_cache1')\n",
     "vw = Vw(vw_path,\n",
     "    cache,\n",
     "    handlers=[Handlers.WidgetHandler()],\n",
-    "#    loggers=[Loggers.ConsoleLogger('DEBUG')]\n",
+    " #   loggers=[Loggers.ConsoleLogger('DEBUG')]\n",
     "    )"
    ]
   },
@@ -65,8 +65,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = [r'C:\\data\\cb\\1.json',\n",
-    "    r'C:\\data\\cb\\2.json',\n",
+    "inputs = [\n",
+    "    r'cb-1.json',\n",
+    "    r'cb-2.json',\n",
     "#    r'C:\\data\\cb\\3.json',\n",
     "    ]\n",
     "inputs"
@@ -115,8 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Loss[0]: {result[0].Loss}')\n",
-    "print(f'Populated options: {result[0].Populated}')"
+    "print(f'loss[0]: {result[0].loss}')\n",
+    "print(f'outputs: {result[0].outputs}')"
    ]
   },
   {
@@ -163,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result[~result['!Loss'].notnull()].iloc[0]['!Job'].Tasks[0].stdout()"
+    "result[~result['!Loss'].notnull()].iloc[0]['!Job'].tasks[0].stdout()"
    ]
   },
   {
@@ -189,9 +190,16 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "[(-r['!Metrics']['loss_per_example']).plot(label=f\"{r['!Job'].Name}\", figsize=(10,6)) for i, r in result[result['!Loss'].notnull()].iterrows()]\n",
+    "[(-r['!Metrics']['loss_per_example']).plot(label=f\"{r['!Job'].name}\", figsize=(10,6)) for i, r in result[result['!Loss'].notnull()].iterrows()]\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
