--- a/from_mwt_ds/DataScience/sweep_local.ipynb
+++ b/from_mwt_ds/DataScience/sweep_local.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8-final"
+   "version": "3.8.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python36564bitbasecondad44845cb0df0418986ceeb24f570a602",
-   "display_name": "Python 3.6.5 64-bit ('base': conda)",
+   "name": "python38564bitfd59076926044bd899f4541e1d3f6749",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python"
   }
  },
@@ -42,7 +42,7 @@
     "import pandas as pd\n",
     "\n",
     "#your vw path\n",
-    "vw_path = r'C:\\vw\\vw.exe'\n",
+    "vw_path = r'/bin/vw'\n",
     "\n",
     "#path to local folder to keep intermediate results\n",
     "cache = VwCache(r'_cache')\n",
@@ -68,8 +68,8 @@
    "outputs": [],
    "source": [
     "inputs = [\n",
-    "    r'C:\\data\\cb\\1.json',\n",
-    "    r'C:\\data\\cb\\2.json',\n",
+    "    r'cb-1.json',\n",
+    "    r'cb-2.json'\n",
     "    ]\n",
     "inputs"
    ]
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "[(-r['!Metrics']['loss_per_example']).plot(label=f\"{r['!Job'].Name}\", figsize=(10,6)) for i, r in result[result['!Loss'].notnull()].iterrows()]\n",
+    "[(-r['!Metrics']['loss_per_example']).plot(label=f\"{r['!Job'].name}\", figsize=(10,6)) for i, r in result[result['!Loss'].notnull()].iterrows()]\n",
     "plt.legend()"
    ]
   },
@@ -168,6 +168,13 @@
     "result = vw.train(inputs, opts)\n",
     "result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
