first file pipeline e2e woring version

--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -1,46 +1,62 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.8-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.8 64-bit (conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "4dff55ca91944d6d9858ae4ea68cb2f4fdaf9f82f60f8d760b63b75c1116a87f"
-    }
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "small = ['small1.json', 'small2.json']\n",
-    "large = ['01_0.json']"
+    "large = ['01_0.json']\n",
+    "\n",
+    "files = small"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Total'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=2.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['_cache\\\\cache-p\\\\9994b6a3ba3c46af807259c8b5d13f70',\n",
+       " '_cache\\\\cache-p\\\\0bc0717ead83e333f080721b1355126e']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from VwPipeline import Loggers, Handlers\n",
     "from VwPipeline.VwCache import VwCache\n",
@@ -61,21 +77,21 @@
     "opts = pd.DataFrame(product(\n",
     "    dimension('#base', ['--ccb_explore_adf --dsjson --compressed --synthcover --power_t 0  -P 1 --preserve_performance_counters --save_resume']),\n",
     "))\n",
-    "preds = vw.train(small, opts, ['-p'])\n",
+    "preds = vw.train(files, opts, ['-p'])\n",
     "prediction_files = preds.iloc[0]['!Outputs']['-p']\n",
     "prediction_files"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Dataflow"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,59 +99,66 @@
     "import pandas as pd\n",
     "\n",
     "from itertools import chain\n",
-    "from collections.abc import Iterable, Callable, Mapping\n",
     "from pathlib import Path\n",
     "\n",
-    "def _load_hash(path: str) -> int:\n",
-    "    hash_path = f'{path}.hash'\n",
-    "    if not os.path.exists(hash_path):\n",
-    "        return None\n",
-    "    try:\n",
-    "        hash_value = int(open(hash_path, 'r').read())\n",
-    "    except:\n",
-    "        hash_value = None\n",
-    "    return hash_value\n",
     "\n",
-    "def _save_hash(hash_value: int, path: str) -> None:\n",
-    "    with open(f'{path}.hash','w') as f:\n",
-    "        f.write(str(hash_value))\n",
     "\n",
-    "def _evaluate_hash(path: str) -> int:\n",
-    "    return Path(path).stat().st_size\n",
+    "class FileSizeHasher:\n",
+    "    extension = 'size'\n",
+    "    \n",
+    "    def evaluate(self, path):\n",
+    "        return Path(path).stat().st_size\n",
     "\n",
-    "def _is_in_sync(input: str, output: str) -> bool:\n",
-    "    input_hash = _evaluate_hash(input)\n",
-    "    output_hash = _load_hash(output)\n",
-    "    return input_hash and output_hash and input_hash == output_hash\n",
+    "class FilesPipeline:\n",
+    "    hasher = FileSizeHasher()\n",
+    "    \n",
+    "    def _load_hash(self, path):\n",
+    "        hash_path = f'{path}.{self.hasher.extension}'\n",
+    "        if not Path(hash_path).exists():\n",
+    "            return None\n",
+    "        try:\n",
+    "            hash_value = int(open(hash_path, 'r').read())\n",
+    "        except:\n",
+    "            hash_value = None\n",
+    "        return hash_value\n",
+    "    \n",
+    "    def _is_in_sync(self, inp, output):\n",
+    "        input_hash = self.hasher.evaluate(inp)\n",
+    "        output_hash = self._load_hash(output)\n",
+    "        return input_hash and output_hash and input_hash == output_hash\n",
     "\n",
-    "def _sync(input: str, output: str) -> None:\n",
-    "    _save_hash(_evaluate_hash(input), output)\n",
-    "\n",
-    "def files_2_ndjsons(\n",
-    "    files: Iterable[str],\n",
-    "    processor: Callable[[Iterable[str]], dict],\n",
-    "    path_gen: Callable[[str], str] = None,\n",
-    "    process: bool=False) -> Iterable[str]:\n",
-    "    path_gen = path_gen or (lambda f: f'{f}.{processor.__name__}') \n",
-    "    result = []\n",
-    "    for path_in in files:\n",
-    "        print(f'Processing {path_in}...')\n",
-    "        path_out = path_gen(path_in)\n",
-    "        Path(path_out).parent.mkdir(parents=True, exist_ok=True)\n",
-    "        if process or not _is_in_sync(path_in, path_out):\n",
-    "            with open(path_out, 'w') as fout:\n",
-    "                with open(path_in) as fin:\n",
-    "                    fout.writelines(map(lambda o: f'{json.dumps(o)}\\n', processor(fin)))\n",
-    "            _sync(path_in, path_out)\n",
-    "        if Path(path_out).exists():\n",
-    "            result.append(path_out)\n",
-    "    return result\n",
+    "    def _sync(self, inp, output):\n",
+    "        with open(f'{output}.{self.hasher.extension}','w') as f:\n",
+    "            f.write(str(self.hasher.evaluate(inp)))\n",
+    "    \n",
+    "    def __init__(self, hasher = None):\n",
+    "        self.hasher = hasher if hasher is not None else self.hasher\n",
+    "    \n",
+    "    def process(self, \n",
+    "        files,\n",
+    "        processor,\n",
+    "        path_gen=None,\n",
+    "        process=False):\n",
+    "        path_gen = path_gen or (lambda f: f'{f}.{processor.__name__}') \n",
+    "        result = []\n",
+    "        for path_in in files:\n",
+    "            print(f'Processing {path_in}...')\n",
+    "            path_out = path_gen(path_in)\n",
+    "            Path(path_out).parent.mkdir(parents=True, exist_ok=True)\n",
+    "            if process or not self._is_in_sync(path_in, path_out):\n",
+    "                with open(path_out, 'w') as fout:\n",
+    "                    with open(path_in) as fin:\n",
+    "                        fout.writelines(processor(fin))\n",
+    "                self._sync(path_in, path_out)\n",
+    "            if Path(path_out).exists():\n",
+    "                result.append(path_out)\n",
+    "        return result\n",
     "\n",
     "def files_2_csvs(\n",
-    "    files: Iterable[str],\n",
-    "    processor: Callable[[Iterable[str]], Iterable[dict]],\n",
-    "    path_gen: Callable[[str], str] = None,\n",
-    "    process: bool=False) -> Iterable[str]:\n",
+    "    files,\n",
+    "    processor,\n",
+    "    path_gen=None,\n",
+    "    process=False):\n",
     "    result = []\n",
     "    for f in files:\n",
     "        print(f'Processing {f}...')\n",
@@ -164,15 +187,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Parsers"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,72 +205,100 @@
     "import pandas as pd\n",
     "from collections import ChainMap\n",
     "\n",
-    "class DsJsonCcb:\n",
-    "    context_processors = []\n",
-    "    action_processors = []\n",
-    "    slot_processors = []\n",
-    "    activated_only = []\n",
-    "\n",
-    "    def __init__(self, context_processors=[], slot_processors=[], activated_only=True):\n",
-    "        self.context_processors = context_processors\n",
-    "        self.slot_processors = slot_processors\n",
-    "\n",
-    "    def _is_decision(self, line):\n",
+    "def is_ccb_decision(line):\n",
     "        return line.startswith('{\"Timestamp\"')\n",
+    "    \n",
+    "class UniformSampler:\n",
+    "    counter = 0\n",
+    "    \n",
+    "    def __init__(self, fraction):\n",
+    "        self.period = int(1/fraction)\n",
+    "        \n",
+    "    def do(self, line):\n",
+    "        self.counter = (self.counter + 1) % self.period\n",
+    "        return self.counter == 0\n",
     "\n",
-    "    def lines_2_lines(self, lines):\n",
-    "        return filter(lambda l: self._is_decision(l), lines)\n",
+    "def sample(fraction):\n",
+    "    import random\n",
+    "    return random.random() < fraction\n",
     "\n",
-    "    def line_2_ndjson(self, line):\n",
+    "class DsJsonCcb:   \n",
+    "    default_top_processor = lambda o: {\n",
+    "        'Timestamp': o['Timestamp'],\n",
+    "        '_skipLearn': False if '_skipLearn' not in o else o['_skipLearn'],\n",
+    "        'pdrop': 0.0 if 'pdrop' not in o else o['pdrop']}\n",
+    "    \n",
+    "    default_slot_processor = lambda o: {\n",
+    "        '_inc': o['_inc'] if '_inc' in o else []}\n",
+    "    \n",
+    "    default_outcome_processor = lambda o: {\n",
+    "        '_label_cost': o['_label_cost'],\n",
+    "        '_id': o['_id'],\n",
+    "        '_a': o['_a'],\n",
+    "        '_p': o['_p']} \n",
+    "    \n",
+    "    processors = {\n",
+    "        '/': [default_top_processor],\n",
+    "        'c': [],\n",
+    "        '_multi': [],\n",
+    "        '_slots': [default_slot_processor],\n",
+    "        '_outcomes': [default_outcome_processor]\n",
+    "    }\n",
+    "\n",
+    "    filters = [is_ccb_decision]\n",
+    "\n",
+    "    def __init__(self, processors = None, filters = None):\n",
+    "        self.processors = processors if processors is not None else self.processors\n",
+    "        self.filters = filters if filters is not None else self.filters\n",
+    "\n",
+    "    def process_decision(self, line):\n",
     "        parsed = json.loads(line)\n",
-    "        shared = dict(ChainMap({ 'T': parsed['Timestamp'], #pd.to_datetime(parsed['Timestamp']),\n",
-    "                    'SkipLearn': False if '_skipLearn' not in parsed else parsed['_skipLearn'],\n",
-    "                    'Pdrop': 0.0 if 'pdrop' not in parsed else parsed['pdrop']},\n",
-    "                     *[p(parsed['c']) for p in self.context_processors]))\n",
+    "        top = dict(ChainMap(*[p(parsed) for p in self.processors['/']]))\n",
+    "        shared = dict(ChainMap(*[p(parsed['c']) for p in self.processors['c']]))\n",
     "\n",
     "        actions = [None] * len(parsed['c']['_multi'])\n",
     "        for i, o in enumerate(parsed['c']['_multi']):\n",
-    "            actions[i] = dict(ChainMap(*[p(o) for p in self.action_processors]))\n",
+    "            actions[i] = dict(ChainMap(*[p(o) for p in self.processors['_multi']]))\n",
     "\n",
-    "        slots = [None] * len(parsed['_outcomes'])\n",
-    "        for i, o in enumerate(zip(parsed['c']['_slots'], parsed['_outcomes'])):\n",
-    "            slots[i] = dict(ChainMap({\n",
-    "                    'Reward': o[1]['_label_cost'],\n",
-    "                    'Id': o[1]['_id'],\n",
-    "                    'Chosen': o[1]['_a'][0],\n",
-    "                    'P': o[1]['_p'][0],\n",
-    "                    'Inc': o[0]['_inc'] if '_inc' in o[0] else []},\n",
-    "                    *[p(*o) for p in self.slot_processors]))\n",
+    "        slots = [None] * len(parsed['c']['_slots'])\n",
+    "        for i, o in enumerate(parsed['c']['_slots']):\n",
+    "            slots[i] = dict(ChainMap(*[p(o) for p in self.processors['_slots']]))\n",
     "        \n",
-    "        return {'shared': shared, '_multi': actions, 'slots': slots}\n",
-    "\n",
-    "    def line_2_slots(self, line):\n",
+    "        outcomes = [None] * len(parsed['_outcomes'])\n",
+    "        for i, o in enumerate(parsed['_outcomes']):\n",
+    "            outcomes[i] = dict(ChainMap(*[p(o) for p in self.processors['_outcomes']]))\n",
+    "        \n",
+    "        result = dict(ChainMap(top, {'c': dict(ChainMap(shared, {'_multi': actions, '_slots': slots})), '_outcomes': outcomes}))\n",
+    "        return json.dumps(result)\n",
+    "        \n",
+    "    def ndjson_2_slots(self, line):\n",
     "        parsed = json.loads(line)\n",
     "        session = {'Session': str(uuid.uuid4()),\n",
-    "                    'Timestamp': pd.to_datetime(parsed['Timestamp']),\n",
-    "                    'NumActions': len(parsed['c']['_multi']),\n",
-    "                    'NumSlots': len(parsed['c']['_slots']),\n",
-    "                    'SkipLearn': False if '_skipLearn' not in parsed else parsed['_skipLearn'],\n",
-    "                    'Pdrop': 0.0 if 'pdrop' not in parsed else parsed['pdrop']}\n",
-    "        session_custom = [p(parsed['c']) for p in self.context_processors]\n",
+    "                    'T': pd.to_datetime(parsed['shared']['T']),\n",
+    "                    'NumActions': len(parsed['_multi']),\n",
+    "                    'NumSlots': len(parsed['_slots']),\n",
+    "                    'SkipLearn': False if '_skipLearn' not in parsed['shared'] else parsed['shared']['_skipLearn'],\n",
+    "                    'Pdrop': 0.0 if 'pdrop' not in parsed['shared'] else parsed['shared']['pdrop']}\n",
+    "        session_custom = [p(parsed['shared']) for p in self.context_processors]\n",
     "\n",
-    "        slots = [None] * len(parsed['_outcomes'])\n",
-    "        for i, o in enumerate(parsed['_outcomes']):\n",
+    "        slots = [None] * len(parsed['slots'])\n",
+    "        for i, o in enumerate(parsed['slots']):\n",
     "            slots[i] = ChainMap({'SlotIdx': i,\n",
-    "                    'Cost': o['_label_cost'],\n",
-    "                    'EventId': o['_id'],\n",
+    "                    'Reward': o['Reward'],\n",
+    "                    'Id': o['Id'],\n",
     "                    'ActionsPerSlot': len(o['_a']),\n",
-    "                    'Chosen': o['_a'][0],\n",
-    "                    'Prob': o['_p'][0]},\n",
+    "                    'Chosen': o['Chosen'],\n",
+    "                    'Prob': o['P']},\n",
     "                    *[p(o) for p in self.slot_processors])\n",
     "        \n",
     "        return map(lambda s: ChainMap(session, *session_custom, s), slots)\n",
     "    \n",
-    "    def lines_2_slots(self, lines):\n",
-    "        return itertools.chain.from_iterable(map(lambda l: self.line_2_slots(l), self.lines_2_lines(lines)))\n",
-    "\n",
-    "    def lines_2_ndjson(self, lines):\n",
-    "        return map(lambda l: self.line_2_ndjson(l), self.lines_2_lines(lines))\n",
+    "    def process(self, lines):\n",
+    "        for f in self.filters:\n",
+    "            lines = filter(lambda l: f(l), lines)\n",
+    "        if len(self.processors) > 1:\n",
+    "            return map(lambda l: f'{self.process_decision(l)}\\n', lines) \n",
+    "        return lines\n",
     "    \n",
     "\n",
     "class VwPredictionsCcb:\n",
@@ -265,20 +316,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Processors"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "def timestamp(row):\n",
     "    return {'T': row['Timestamp']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing small1.json...\n",
+      "Processing small2.json...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['processed\\\\small1.json', 'processed\\\\small2.json']"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parser = DsJsonCcb()\n",
+    "pipeline = FilesPipeline()\n",
+    "\n",
+    "result = pipeline.process(small, parser.process, path_gen=lambda p: fr'processed\\{p}', process=True)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing processed\\small1.json...\n",
+      "Processing processed\\small2.json...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['processed\\\\small1.json.process', 'processed\\\\small2.json.process']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parser = DsJsonCcb(filters=[lambda l: True])\n",
+    "result = pipeline.process(result, parser.process, process=True)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing small1.json...\n",
+      "Processing small2.json...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['small1.json.process', 'small2.json.process']"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sampler = UniformSampler(0.5)\n",
+    "\n",
+    "parser = DsJsonCcb(filters=[lambda l: sampler.do(l)])\n",
+    "result = pipeline.process(small, parser.process, process=True)\n",
+    "result"
    ]
   },
   {
@@ -298,11 +443,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "parser = DsJsonCcb()\n",
-    "result = files_2_ndjsons(small, parser.lines_2_ndjson, path_gen=lambda p: fr'processed\\{p}')\n",
-    "result"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -626,6 +767,63 @@
     "def dangling_rewards(file):\n",
     "    return DsJson.dangling_rewards(open(file, 'r', encoding='utf-8'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame([{'i': i} for i in range(16)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sample(frac = 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
